@@ -1,6 +1,6 @@
 --- Author:
 
- * Daniel Morales <daniel@suruware.com>
+ * Daniel Morales <daniminas@gmail.com>
 
 
 --- Contributors/Big thanks to:
